# kalshi-arb

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/core/: asset_context.py  auth.py  config.py  display.py  market_metadata.py  market_profiles.py  market_selection.py  settlement.py
src/data/: kalshi_rest.py  kalshi_trading.py  kalshi_ws.py  orderbook_math.py
src/engine/: asian_pricer.py  book_microstructure.py  live_pricing.py  orderbook.py  reconciliation.py  scanner.py  settlement_sampling.py  stream_metrics.py  streamer.py  twap.py  vol_estimator.py
src/engine/execution/: __init__.py  metrics.py  models.py  paper_account.py  paper_models.py  paper_simulator.py  persistence.py  policy.py  risk.py  runtime.py
src/engine/market_stream/: bootstrap.py  discovery.py  display.py  reconciliation_runner.py
src/engine/pricing/: pipeline.py
src/engine/shadow/: __init__.py  events.py  fee_model.py  fill_model.py  models.py  paper_ledger.py  runtime.py  settings_state.py  signal_engine.py
src/engine/simulation/: __init__.py  gbm_engine.py  replay.py  service.py  visuals.py
src/execution/: order_manager.py
src/feeds/: brti_aggregator.py  brti_calc.py  brti_state.py  context.py
src/feeds/calc/: rti_pipeline.py
src/feeds/exchanges/: __init__.py  base.py  bitstamp.py  coinbase.py  gemini.py  kraken.py  paxos.py  runtime.py
src/feeds/state/: book_store.py  diagnostics_store.py  (+2 more)
src/ui/: contracts.py  market_metadata.py  web_app.py
tests/: test_shadow_settings.py  test_signal_engine.py  test_simulation_replay.py
(+19 files in other folders)
